--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,8 +28,10 @@
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigationView"
         android:layout_width="wrap_content"
+        android:background="@color/purple_200"
         app:headerLayout="@layout/nav_header"
         app:menu="@menu/navigation_drawer"
+        android:maxWidth="200dp"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         android:layout_height="match_parent" />
